--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "packages/*"
   ],
   "scripts": {
+    "clean": "turbo run clean --parallel && rm -rf node_modules",
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
+    "test": "turbo run test --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
