--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,13 +6,13 @@
     "dist",
     "types"
   ],
-  "main": "./dist/component-library.cjs.js",
-  "module": "./dist/component-library.es.js",
+  "main": "./dist/component-library.js",
+  "module": "./dist/component-library.mjs",
   "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/component-library.es.js",
-      "require": "./dist/component-library.cjs.js"
+      "import": "./dist/component-library.mjs",
+      "require": "./dist/component-library.js"
     }
   },
   "publishConfig": {
@@ -23,46 +23,48 @@
     "url": "git@github.com:locol23/design-system-boilerplate.git"
   },
   "scripts": {
-    "clean": "rimraf types dist",
-    "dev": "vite",
+    "clean": "rimraf types dist .turbo",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "dev": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@linaria/rollup": "^3.0.0-beta.23",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-react": "^1.3.0",
+    "@linaria/vite": "^4.2.9",
+    "@storybook/addon-essentials": "^7.0.0-rc.4",
+    "@storybook/addon-interactions": "^7.0.0-rc.4",
+    "@storybook/addon-links": "^7.0.0-rc.4",
+    "@storybook/blocks": "^7.0.0-rc.4",
+    "@storybook/react": "7.0.0-rc.4",
+    "@storybook/react-vite": "^7.0.0-rc.4",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "v12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^27.5.2",
     "@types/node": "^17.0.40",
     "@types/react": "17.0.48",
     "@types/react-dom": "17.0.17",
-    "@vitejs/plugin-react": "^1.3.2",
-    "jsdom": "^19.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "happy-dom": "^8.9.0",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ress": "^5.0.2",
     "rimraf": "^3.0.2",
+    "storybook": "^7.0.0-rc.4",
+    "tsconfig": "link:../tsconfig",
     "typescript": "^4.7.4",
-    "vite": "^2.9.15",
-    "vitest": "^0.22.1"
+    "vite": "^4.2.0",
+    "vitest": "^0.29.3"
   },
   "peerDependencies": {
-    "@types/react": "^17.0.0 || ^18.0.0",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "@types/react": "^17.0.0 || ^18.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@linaria/babel-preset": "^3.0.0-beta.23",
-    "@linaria/core": "^3.0.0-beta.22",
-    "@linaria/react": "^3.0.0-beta.22",
-    "@linaria/shaker": "^3.0.0-beta.23"
+    "@linaria/core": "^4.2.8",
+    "@linaria/react": "^4.3.6",
+    "@testing-library/react": "^14.0.0"
   }
 }
