--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,8 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
     "@linaria/vite": "^4.2.9",
     "@storybook/addon-essentials": "^7.0.0-rc.4",
     "@storybook/addon-interactions": "^7.0.0-rc.4",
